Create /api/users/me/avatar
